--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,24 @@ contourpy==1.0.6
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==39.0.2
+customtkinter==5.1.2
 cvzone==1.5.6
 cycler==0.11.0
+darkdetect==0.8.0
 DateTime==4.7
 Deprecated==1.2.13
+dill==0.3.6
 distlib==0.3.6
 execnet==1.9.0
+ffmpeg-python==0.2.0
 fifo==0.0.3
 filelock==3.9.0
 Flask==2.2.2
 Flask-SocketIO==5.3.2
 fonttools==4.34.4
+future==0.18.3
 idna==3.3
+importlib==1.0.4
 importlib-metadata==5.0.0
 importlib-resources==5.10.0
 iniconfig==1.1.1
@@ -36,6 +42,7 @@ libusb==1.0.26b5
 MarkupSafe==2.1.1
 matplotlib==3.6.2
 mock==4.0.3
+multiprocess==0.70.14
 numpy==1.23.1
 openapi-codec==1.3.2
 opencv-python==4.6.0.66
@@ -48,6 +55,7 @@ platformdirs==3.1.0
 pluggy==1.0.0
 py==1.11.0
 PyAutoIt==0.6.5
+pybase64==1.2.3
 pycparser==2.21
 PyJWT==2.4.0
 pyOpenSSL==23.0.0
@@ -57,6 +65,7 @@ pytest==7.1.3
 pytest-shutil==1.7.0
 python-dateutil==2.8.2
 python-engineio==4.3.4
+Python-IO==0.3
 python-socketio==5.7.2
 pytz==2022.2.1
 pyusb==1.2.1
@@ -67,6 +76,7 @@ screeninfo==0.8.1
 six==1.16.0
 subprocess.run==0.0.8
 termcolor==2.0.1
+toml==0.10.2
 tomli==2.0.1
 twilio==7.13.0
 uritemplate==4.1.1
