--- a/config.toml
+++ b/config.toml
@@ -3,9 +3,11 @@
 
 [model]
 
-module = "Test_model"
+#module = 'static/Model/SonoNet_PyTorch-master/test'
+#function = "runIt"
 
-function = "modelOut"
+module = 'static/Model/COVID_19_detection_with_Chest_X_Ray_using_PyTorch_master/evaluation_metrics'
+function = "main"
 
 
 [image_capture]
@@ -17,11 +19,10 @@ image_capture_freeze = true
 
 image_capture_background = true
 
-[image_capture.resolution]
+device_name = "DVI2USB 3.0 D2S342374"
 
 resolution = [640,480]
 
-[image_capture.fps]
 fps = 4
 
 [interface]
@@ -31,6 +32,8 @@ fps = 4
 #[3][4]
 #pick where you want to place the different elements
 #If there are anything not needed or not gonna be visualized set value to 0
+  [interface.button]
+  button_placement = 3
   [interface.images]
   captured_image_placement = 1
   analyzed_image_placement = 2
@@ -38,17 +41,25 @@ fps = 4
   result_list_placement = 2
   description_placement = 2
   [interface.standardplanes]
-  standardplanes_placement = 4
+  standardplanes_placement = 0
+
 
 
 
 [returns]
+  [returns.output]
+  #specify the model output indecies order for different results
+  image_index = 0
+
+  labels_index = 1
+
+  result_index = 2
+
+  description_index = 3
 
   [returns.image]
 
   image_bool = true
-
-  return_index = 0
 
   image_format = '.png'
 
@@ -56,12 +67,10 @@ fps = 4
 
   description_bool = true
 
-  return_index = 1
-
   [returns.results]
 
   result_bool =true
 
-  return_amount = 3
+  [returns.labels]
 
-  result_index = [5,7,9,4,6,2]
+  labels_bool = true
