--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 *jpgToMha.py*
 *myimage.jpg*
 *Data/*
+*static/placeholder_images/test_jpg*
+*static/placeholder_images/testimages*
+*flask_monitoringdashboard.db*
