--- a/config.toml
+++ b/config.toml
@@ -1,29 +1,20 @@
-[communication]
-
-
 [model]
-
-#module = 'static/Model/SonoNet_PyTorch-master/test'
-#function = "runIt"
-
-module = 'static/Model/COVID_19_detection_with_Chest_X_Ray_using_PyTorch_master/evaluation_metrics'
-function = "main"
-
+module = 'static/Model/SonoNet_PyTorch-master/test' # path to the model python script without .py
+function= 'runIt' #name of the function analyzing a single image
 
 [image_capture]
-
-
-image_capture_button = false
-
-image_capture_freeze = true
-
+#bool for activating the desired capturing method
+image_capture_button = true
+image_capture_freeze = false
 image_capture_background = true
+#capturing setting, device_name varies depending on the operation system in use
 
-device_name = "DVI2USB 3.0 D2S342374"
-
-resolution = [640,480]
-
-fps = 4
+[capture_settings]
+#device_name= "Integrated Camera"
+device_name = "image device" #only necessary if using BackgroundCapture
+resolution = [640,480] #changes the resolution of captured images
+image_format = 'jpg' #changes the format of the image captured
+background_capture_fps = 10 #only necessary if using BackgroundCapture
 
 [interface]
 #the interface is split in 4 different squares 2 rows an 2 columns
@@ -32,45 +23,23 @@ fps = 4
 #[3][4]
 #pick where you want to place the different elements
 #If there are anything not needed or not gonna be visualized set value to 0
-  [interface.button]
-  button_placement = 3
-  [interface.images]
+  button_placement = 3 #only enable if image_capture_button == true
   captured_image_placement = 1
-  analyzed_image_placement = 2
-  [interface.results]
+  analyzed_image_placement = 1
   result_list_placement = 2
   description_placement = 2
-  [interface.standardplanes]
   standardplanes_placement = 0
 
-
-
-
-[returns]
-  [returns.output]
-  #specify the model output indecies order for different results
+[output]
+  [output.indecies]
+  #specify the indecies order for different model output, false == not present
   image_index = 0
-
   labels_index = 1
-
   result_index = 2
-
   description_index = 3
 
-  [returns.image]
-
+  [output.booleans]
   image_bool = true
-
-  image_format = '.png'
-
-  [returns.description]
-
   description_bool = true
-
-  [returns.results]
-
   result_bool =true
-
-  [returns.labels]
-
   labels_bool = true
