--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *notes.md*
 *static/Model/COVID_19_detection_with_Chest_X_Ray_using_PyTorch_master*
 *static/Model/SonoNet_PyTorch-master*
-
+*static/ffmpeg*
 *quick.py*
 *jpgToMha.py*
 *myimage.jpg*
