--- a/requirements.txt
+++ b/requirements.txt
@@ -1,163 +1,28 @@
-absl-py==1.4.0
-APScheduler==3.10.1
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==22.1.0
-autoit==0.2.6
 bidict==0.22.1
-cachetools==5.3.0
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.0
+blinker==1.6.2
 click==8.1.3
-cloudpickle==2.2.1
-colorama==0.4.5
-colorhash==1.2.1
-configparser==5.3.0
-contextlib2==21.6.0
-contourpy==1.0.6
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==39.0.2
-customtkinter==5.1.2
-cvzone==1.5.6
+colorama==0.4.6
+contourpy==1.0.7
 cycler==0.11.0
-darkdetect==0.8.0
-DateTime==4.7
-decorator==5.1.1
-Deprecated==1.2.13
-dill==0.3.6
-distlib==0.3.6
-dm-tree==0.1.8
-execnet==1.9.0
-ffmpeg-python==0.2.0
-fifo==0.0.3
-filelock==3.9.0
-Flask==2.2.2
-Flask-MonitoringDashboard==3.1.1
-Flask-SocketIO==5.3.2
-flatbuffers==23.3.3
-fonttools==4.34.4
-fsspec==2023.4.0
-future==0.18.3
-gast==0.4.0
-google-auth==2.17.3
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-greenlet==2.0.2
-grpcio==1.54.0
-h5py==3.8.0
-idna==3.3
+Flask==2.3.2
+Flask-SocketIO==5.3.4
+fonttools==4.39.4
 ImageHash==4.3.1
-imageio==2.28.1
-importlib==1.0.4
-importlib-metadata==5.0.0
-importlib-resources==5.10.0
-iniconfig==1.1.1
 itsdangerous==2.1.2
-itypes==1.2.0
-jax==0.4.8
 Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.3
-keras==2.12.0
-keyboard==0.13.5
 kiwisolver==1.4.4
-libclang==16.0.0
-libspn==0.1.3
-libusb==1.0.26b5
-Markdown==3.4.3
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-ml-dtypes==0.1.0
-mock==4.0.3
-morphsnakes==2.0.1
-mpmath==1.3.0
-multiprocess==0.70.14
-mypy-extensions==1.0.0
-networkx==3.1
-numpy==1.23.5
-oauthlib==3.2.2
-openapi-codec==1.3.2
-opencv-python==4.6.0.66
-opt-einsum==3.3.0
-packaging==21.3
-pandas==2.0.1
-path==16.5.0
-path.py==12.5.0
-Pillow==9.2.0
-pkg-about==1.0.7
-platformdirs==3.1.0
-pluggy==1.0.0
-protobuf==4.22.3
-psutil==5.9.5
-py==1.11.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-PyAutoIt==0.6.5
-pybase64==1.2.3
-pycparser==2.21
-PyJWT==2.4.0
-pyOpenSSL==23.0.0
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+numpy==1.24.3
+opencv-python==4.7.0.72
+packaging==23.1
+Pillow==9.5.0
 pyparsing==3.0.9
-pyre-extensions==0.0.30
-pyserial==3.5
-pytest==7.1.3
-pytest-shutil==1.7.0
 python-dateutil==2.8.2
-python-engineio==4.3.4
-Python-IO==0.3
-python-socketio==5.7.2
-pytz==2022.2.1
-pyusb==1.2.1
+python-engineio==4.4.1
+python-socketio==5.8.0
 PyWavelets==1.4.1
-pywin32==304
-PyYAML==6.0
-redis==4.3.4
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.9
 scipy==1.10.1
-screeninfo==0.8.1
-seaborn==0.12.2
-SimpleITK==2.2.1
 six==1.16.0
-SonoNet-PyTorch==0.1
-spn==0.1.1
-SQLAlchemy==2.0.15
-subprocess.run==0.0.8
-sympy==1.11.1
-tensorboard==2.12.2
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow-probability==0.19.0
-termcolor==2.0.1
-Theano==1.0.5+unknown
 toml==0.10.2
-tomli==2.0.1
-torch==2.0.1+cu118
-torchaudio==2.0.2+cu118
-torchmetrics==0.11.4
-torchnet==0.0.4
-torchtnt==0.1.0
-torchvision==0.15.2+cu118
-tornado==6.3.1
-tqdm==4.65.0
-twilio==7.13.0
-typing-inspect==0.8.0
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==2.0.0
-uritemplate==4.1.1
-urllib3==1.26.11
-virtualenv==20.20.0
-visdom==0.2.4
-waitress==2.1.2
-websocket-client==1.5.1
-Werkzeug==2.2.2
-wrapt==1.14.1
-zipp==3.9.0
-zope.interface==5.5.0
+Werkzeug==2.3.4
